 TODO

* Should interactiveSync and syncStack be moved to lib/ ?
* Really need to do something about all the disabled options in the
  config dialog. Some of them might make sense.

2002-08-30  Adriaan de Groot
* Much mucking about with dlp_ functions in an attempt to discover why
  syncing wasn't discovering _any_ of my databases. Also handling
  dlp_ReadUserInfo failures, indicating possible password use. Weird.

2002-08-28  Adriaan de Groot
* Mess around a bit with Chris' crashes and the exiting-on-cancel one.
* PilotDaemon not passing on correct signals and slots to KPilot.
  This should finally enable some progress-meter changing.
* Ditched the check of dlp_OpenConduit when the device is opened
  initially, it's returning -18 after the user name is read correctly.
  The USB support under FBSD is still very patchy, though, since
  it thinks I have just one database.

2002-08-24  Adriaan de Groot
* Add a "Fail Now" mode to the NULL conduit to help debugging.

2002-08-24  Adriaan de Groot
* (syncAction.cc) Whoops, forgot to implement the timeout feature
  in interactive questionYesNo.
* One more go through all the sources removing warnings.

2002-08-23  Adriaan de Groot
* (addressWidget.cc) Added more debugging output in response to bug #45977.
  Gosh, it's even a FreeBSD user. This basically means that the database
  can't be opened, and I have no idea why.
* (kpilotlink.cc) Added more debugging output in KPilotLink::acceptDevice() 
  to deal with problems from Chris Cowell and Beat Straehl.
* (kpilotlink.cc) (Perhaps) check pilot-link version more gracefully.
* (pilotUser.h) bzero() new KPilotUser data structures, just in case.
* (interactiveSync.cc) Fix compile warnings.
* (knotes-action.cc) Fix bug that causes the KNotes conduit to hang 
  when KNotes isn't running.
* (everything dependent on SyncAction) Changed the type of exec() to virtual
  bool, and removed it from the slots. Added a new slot execConduit() which